api-deployment.yml
# api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telehoot-api
  namespace: telehoot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: telehoot-api
  template:
    metadata:
      labels:
        app: telehoot-api
    spec:
      containers:
      - name: telehoot-api
        image: cr.yandex/crp68tl21d259sc3nvna/telehoot-api:latest
        ports:
        - containerPort: 8000
