api-service.yml
# api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telehoot-api
  namespace: telehoot
spec:
  selector:
    app: telehoot-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
