front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: telehoot-front
  namespace: telehoot
spec:
  selector:
    app: telehoot-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
