tma-service.yml
apiVersion: v1
kind: Service
metadata:
  name: telehoot-tma
  namespace: telehoot
spec:
  selector:
    app: telehoot-tma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
