api-ingress.yml
# api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telehoot-api
  namespace: telehoot
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: api.deti-durova.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: telehoot-api
            port:
              number: 80
