front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telehoot-front
  namespace: telehoot
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: telehoot.deti-durova.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: telehoot-front
            port:
              number: 80
